[gd_scene load_steps=18 format=3 uid="uid://dq38cdwsf8r1q"]

[ext_resource type="Script" path="res://scenes/game/character/single_load_skin.gd" id="1_cv33l"]
[ext_resource type="Script" path="res://scenes/game/character/single_meri.gd" id="1_edba5"]
[ext_resource type="Script" path="res://scenes/game/character/teleporter.gd" id="2_kqx5y"]
[ext_resource type="Texture2D" uid="uid://dm0gceittncr2" path="res://assets/sprites/character/1_.png" id="3_efbdm"]
[ext_resource type="Texture2D" uid="uid://c7ob3kwj1aii4" path="res://assets/sprites/character/3_.png" id="4_d7wck"]
[ext_resource type="Texture2D" uid="uid://ci2s0c4do0bpe" path="res://assets/sprites/character/equipped/crock/Hip.png" id="6_jv7f5"]
[ext_resource type="Texture2D" uid="uid://igtfmvghqyto" path="res://assets/sprites/character/4_.png" id="6_qwc4p"]
[ext_resource type="Script" path="res://scenes/game/character/pusher.gd" id="7_4qrps"]
[ext_resource type="PackedScene" uid="uid://cfps4j761fr03" path="res://scenes/game/modules/joy_stick.tscn" id="8_lf0pk"]
[ext_resource type="PackedScene" uid="uid://c2khg3vqn4pur" path="res://scenes/game/modules/single_character.tscn" id="9_8ystm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0forh"]
radius = 108.116

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_726q0"]
radius = 54.0
height = 322.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b3qvr"]
radius = 56.0089

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v68vb"]
radius = 53.6051
height = 427.233

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_enw22"]
radius = 55.0
height = 220.0

[sub_resource type="CircleShape2D" id="CircleShape2D_au1i2"]
radius = 55.0091

[sub_resource type="CircleShape2D" id="CircleShape2D_x5waq"]
radius = 56.0089

[node name="Meri" type="Node2D"]
script = ExtResource("1_edba5")

[node name="LocalCharacter" type="Node2D" parent="."]
script = ExtResource("1_cv33l")

[node name="Head" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable", "Damager"]]
position = Vector2(0, -187)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Head"]
texture = ExtResource("3_efbdm")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="LocalCharacter/Head"]
position = Vector2(0, -26)
shape = SubResource("CircleShape2D_0forh")

[node name="HB" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(-54, 80)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB2" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(54, 80)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB3" type="PinJoint2D" parent="LocalCharacter/Head"]
position = Vector2(0, 80)
node_a = NodePath("..")
node_b = NodePath("../../Body")

[node name="HB4" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(-54, 80)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB5" type="DampedSpringJoint2D" parent="LocalCharacter/Head"]
position = Vector2(54, 80)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="Body" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
mass = 0.1
center_of_mass_mode = 1
center_of_mass = Vector2(0, -107)
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Body"]
texture = ExtResource("4_d7wck")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Body"]
shape = SubResource("CapsuleShape2D_726q0")

[node name="RUA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(107, 0)
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RUA"]
texture = ExtResource("4_d7wck")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RUA"]
shape = SubResource("CapsuleShape2D_726q0")

[node name="BRA" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(54.0004, 107)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(-53.9996, 107)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA3" type="PinJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(0.000387339, 107)
rotation = -1.5708
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(54.0004, 107)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RUA"]
position = Vector2(-53.9996, 107)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="RLA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(321, 0)
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RLA"]
texture = ExtResource("4_d7wck")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RLA"]
shape = SubResource("CapsuleShape2D_726q0")

[node name="RRA" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(54.0004, 107)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA2" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(-53.9996, 107)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA3" type="PinJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(0.000387339, 107)
rotation = -1.5708
node_a = NodePath("../../RUA")
node_b = NodePath("..")

[node name="RRA4" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(54.0004, 107)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA5" type="DampedSpringJoint2D" parent="LocalCharacter/RLA"]
position = Vector2(-53.9996, 107)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LUA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-107, 0)
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LUA"]
texture = ExtResource("4_d7wck")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LUA"]
shape = SubResource("CapsuleShape2D_726q0")

[node name="BLA" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(53.9996, -107)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA2" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(-54.0004, -107)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA3" type="PinJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(-0.000387339, -107)
rotation = -1.5708
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BLA4" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(53.9996, -107)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA5" type="DampedSpringJoint2D" parent="LocalCharacter/LUA"]
position = Vector2(-54.0004, -107)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="LLA" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-321, 0)
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LLA"]
texture = ExtResource("4_d7wck")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LLA"]
shape = SubResource("CapsuleShape2D_726q0")

[node name="LLA" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(53.9996, -107)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA2" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(-54.0004, -107)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA3" type="PinJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(-0.000387339, -107)
rotation = -1.5708
node_a = NodePath("../../LUA")
node_b = NodePath("..")

[node name="LLA4" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(53.9996, -107)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA5" type="DampedSpringJoint2D" parent="LocalCharacter/LLA"]
position = Vector2(-54.0004, -107)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LF" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(-428, 0)
mass = 0.1
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LF"]
shape = SubResource("CircleShape2D_b3qvr")

[node name="LF" type="PinJoint2D" parent="LocalCharacter/LF"]
node_a = NodePath("../../LLA")
node_b = NodePath("..")

[node name="RUL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(79, 460.262)
rotation = -0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RUL"]
texture = ExtResource("6_qwc4p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RUL"]
shape = SubResource("CapsuleShape2D_v68vb")

[node name="HRL" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(-52.8851, -160.162)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL2" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(53.2892, -160.062)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL3" type="PinJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(-0.0479279, -159.679)
rotation = 0.523599
node_a = NodePath("../../Hip")
node_b = NodePath("..")

[node name="HRL4" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(-52.8851, -160.162)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL5" type="DampedSpringJoint2D" parent="LocalCharacter/RUL"]
position = Vector2(53.2892, -160.062)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="Hip" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 267)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Hip"]
texture = ExtResource("6_jv7f5")

[node name="BH" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(-54, -55)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH2" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(54, -55)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH3" type="PinJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(0, -55)
node_a = NodePath("../../Stomach")
node_b = NodePath("..")

[node name="BH4" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(-54, -55)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH5" type="DampedSpringJoint2D" parent="LocalCharacter/Hip"]
position = Vector2(54, -55)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Hip"]
shape = SubResource("CapsuleShape2D_enw22")

[node name="LUL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-79.5, 460)
rotation = 0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LUL"]
texture = ExtResource("6_qwc4p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LUL"]
shape = SubResource("CapsuleShape2D_v68vb")

[node name="HLL" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(-53.9212, -159.394)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HLL2" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(53.6192, -159.129)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HLL3" type="PinJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(-0.58403, -159.012)
rotation = -0.523599
node_a = NodePath("../../Hip")
node_b = NodePath("..")

[node name="HLL4" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(-53.9212, -159.394)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HLL5" type="DampedSpringJoint2D" parent="LocalCharacter/LUL"]
position = Vector2(53.6192, -159.129)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(-239.5, 737)
rotation = 0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LLL"]
texture = ExtResource("6_qwc4p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LLL"]
shape = SubResource("CapsuleShape2D_v68vb")

[node name="LLL" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(-53.9212, -159.394)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="LLL2" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(53.6192, -159.129)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="LLL3" type="PinJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(0.281998, -159.511)
rotation = -0.523599
node_a = NodePath("../../LUL")
node_b = NodePath("..")

[node name="LLL4" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(-53.9212, -159.394)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="LLL5" type="DampedSpringJoint2D" parent="LocalCharacter/LLL"]
position = Vector2(53.6192, -159.129)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="LK" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(-319, 876)
mass = 0.01
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/LK"]
shape = SubResource("CircleShape2D_au1i2")

[node name="LK" type="PinJoint2D" parent="LocalCharacter/LK"]
node_a = NodePath("../../LLL")
node_b = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/LK"]

[node name="RLL" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(239.5, 738)
rotation = -0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RLL"]
texture = ExtResource("6_qwc4p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RLL"]
shape = SubResource("CapsuleShape2D_v68vb")

[node name="RRL" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(-53.1192, -159.995)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL2" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(53.0552, -159.894)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL3" type="PinJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(-0.281998, -159.511)
rotation = 0.523599
node_a = NodePath("../../RUL")
node_b = NodePath("..")

[node name="RRL4" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(-53.1192, -159.995)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL5" type="DampedSpringJoint2D" parent="LocalCharacter/RLL"]
position = Vector2(53.0552, -159.894)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RK" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(321, 876)
mass = 0.01
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RK"]
shape = SubResource("CircleShape2D_au1i2")

[node name="RK" type="PinJoint2D" parent="LocalCharacter/RK"]
node_a = NodePath("../../RLL")
node_b = NodePath("..")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/RK"]

[node name="RF" type="RigidBody2D" parent="LocalCharacter" groups=["Damager"]]
position = Vector2(428, 0)
mass = 0.1
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("7_4qrps")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/RF"]
shape = SubResource("CircleShape2D_x5waq")

[node name="RF3" type="PinJoint2D" parent="LocalCharacter/RF"]
node_a = NodePath("../../RLA")
node_b = NodePath("..")

[node name="Stomach" type="RigidBody2D" parent="LocalCharacter" groups=["Damagable"]]
position = Vector2(0, 164)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2_kqx5y")

[node name="Sprite" type="Sprite2D" parent="LocalCharacter/Stomach"]
texture = ExtResource("6_jv7f5")

[node name="BH" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(-54, -55)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH2" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(54, -55)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH3" type="PinJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(0, -55)
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BH4" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(-54, -55)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH5" type="DampedSpringJoint2D" parent="LocalCharacter/Stomach"]
position = Vector2(54, -55)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LocalCharacter/Stomach"]
shape = SubResource("CapsuleShape2D_enw22")

[node name="Extra" type="Node2D" parent="."]

[node name="Center" type="Marker2D" parent="Extra"]
position = Vector2(0, 305)

[node name="Reach" type="Marker2D" parent="Extra/Center"]
position = Vector2(750, 0)

[node name="HitCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="SkillCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="SkillDuration" type="Timer" parent="Extra"]
one_shot = true

[node name="DoubleJoyStick" parent="Extra" instance=ExtResource("8_lf0pk")]

[node name="InvulnerabilityCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="Character" parent="Extra" instance=ExtResource("9_8ystm")]
